| Bug #1858 | SQL-Thread stops working when using optimize table | ||
|---|---|---|---|
| Submitted: | 17 Nov 2003 2:06 | Modified: | 22 Feb 2004 2:35 |
| Reporter: | Anders Henke | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S2 (Serious) |
| Version: | 4.0.15a | OS: | Linux (Linux) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[17 Nov 2003 2:06]
Anders Henke
[20 Nov 2003 4:58]
Anders Henke
Both affected hosts weren't using ECC-memory (although they should do so), so this issue may be related to faulty hardware and not a bug in MySQL itself.
[26 Nov 2003 15:00]
Dean Ellis
Verified with 4.0.17. OPTIMIZE TABLE on the slave while the SQL thread is running results in: Slave: Error 'Server shutdown in progress' on query 'insert into rt select null from rt'. Default database: 'test', Error_code: 1053 It appears to be handled safely (no data loss while testing), and SLAVE START will resume operations.
[7 Dec 2003 13:45]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ChangeSet@1.1644.1.1, 2003-12-04 22:42:18+01:00, guilhem@mysql.com
[22 Feb 2004 2:35]
Guilhem Bichot
Unfortunately the bug still exists in 4.0.18. It is fixed in 4.0.19; here's a patch:
*** sql_base.cc.old 2004-02-22 11:34:11.000000000 +0100
--- sql_base.cc 2004-02-22 11:14:30.000000000 +0100
***************
*** 2364,2370 ****
if (table->db_stat)
result=1;
/* Kill delayed insert threads */
! if (in_use->system_thread && ! in_use->killed)
{
in_use->killed=1;
pthread_mutex_lock(&in_use->mysys_var->mutex);
--- 2364,2371 ----
if (table->db_stat)
result=1;
/* Kill delayed insert threads */
! if ((in_use->system_thread & SYSTEM_THREAD_DELAYED_INSERT) &&
! ! in_use->killed)
{
in_use->killed=1;
pthread_mutex_lock(&in_use->mysys_var->mutex);
[22 Feb 2004 2:35]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fixed in ChangeSet@1.1695.25.1, 2004-02-22 11:22:51+01:00, guilhem@mysql.com
